RESOLVED FIXED127868
IDB: Index reading
https://bugs.webkit.org/show_bug.cgi?id=127868
Summary IDB: Index reading
Jon Lee
Reported 2014-01-29 16:29:53 PST
IDB: Index reading/writing <rdar://problem/15899973>
Attachments
Index *writing* patch, v1 (20.59 KB, patch)
2014-01-31 00:01 PST, Brady Eidson
no flags
Writing v2 - Fix style nit. (20.59 KB, patch)
2014-01-31 00:02 PST, Brady Eidson
andersca: review+
andersca: commit-queue-
Reading patch v1 - Implement with a cursor! (7.21 KB, patch)
2014-02-01 00:15 PST, Brady Eidson
jer.noble: review+
Brady Eidson
Comment 1 2014-01-30 23:48:37 PST
This will be done in two separate patches. Index writing is first. It's straightforward and easy to verify by manual debugging and manual inspection on disk that it is working as expected. Index reading will actually be implemented in terms of index cursors later.
Brady Eidson
Comment 2 2014-01-31 00:01:14 PST
Created attachment 222799 [details] Index *writing* patch, v1
WebKit Commit Bot
Comment 3 2014-01-31 00:02:39 PST
Attachment 222799 [details] did not pass style-queue: ERROR: Source/WebKit2/DatabaseProcess/IndexedDB/UniqueIDBDatabaseBackingStore.h:71: The parameter name "key" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brady Eidson
Comment 4 2014-01-31 00:02:49 PST
Created attachment 222800 [details] Writing v2 - Fix style nit.
Anders Carlsson
Comment 5 2014-01-31 07:47:51 PST
Comment on attachment 222800 [details] Writing v2 - Fix style nit. View in context: https://bugs.webkit.org/attachment.cgi?id=222800&action=review > Source/WebKit2/DatabaseProcess/IndexedDB/sqlite/UniqueIDBDatabaseBackingStoreSQLite.cpp:239 > + IDBIndexMetadata idxMetadata; No need to abbreviate index here. > Source/WebKit2/DatabaseProcess/IndexedDB/sqlite/UniqueIDBDatabaseBackingStoreSQLite.cpp:256 > + auto objectStoreMetadata = metadata->objectStores.find(objectStoreID); I'd call this objectStoreMetadataIt to indicate that it's an iterator (especially since you're using auto).
Brady Eidson
Comment 6 2014-01-31 07:51:08 PST
Brady Eidson
Comment 7 2014-01-31 07:51:26 PST
Retitling to reflect that only reading remains.
Brady Eidson
Comment 8 2014-02-01 00:15:00 PST
Created attachment 222877 [details] Reading patch v1 - Implement with a cursor!
Jer Noble
Comment 9 2014-02-01 10:48:33 PST
Comment on attachment 222877 [details] Reading patch v1 - Implement with a cursor! View in context: https://bugs.webkit.org/attachment.cgi?id=222877&action=review r=me with obligatory nit. > Source/WebKit2/DatabaseProcess/IndexedDB/sqlite/UniqueIDBDatabaseBackingStoreSQLite.cpp:837 > + Ob-nit: Unnecessary whitespace.
Brady Eidson
Comment 10 2014-02-01 11:07:13 PST
Tim Nguyen (:ntim)
Comment 11 2022-03-14 16:36:02 PDT
*** Bug 116223 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.