Source/WebCore/platform/sql/SQLiteStatement.cpp
@@ -428,34 +428,6 @@ void SQLiteStatement::getColumnBlobAsVector(int col, Vector<char>& result)
         result[i] = (static_cast<const unsigned char*>(blob))[i];
 }
 
-const void* SQLiteStatement::getColumnBlob(int col, int& size)
-{
-    ASSERT(col >= 0);
-
-    size = 0;
-
-    if (finalize() != SQLITE_OK)
-        LOG(SQLDatabase, "Finalize failed");
-    if (prepare() != SQLITE_OK) {
-        LOG(SQLDatabase, "Prepare failed");
-        return 0;
-    }
-    if (step() != SQLITE_ROW) {
-        LOG(SQLDatabase, "Step wasn't a row");
-        return 0;
-    }
-
-    if (columnCount() <= col)
-        return 0;
-        
-    const void* blob = sqlite3_column_blob(m_statement, col);
-    if (!blob)
-        return 0;
-
-    size = sqlite3_column_bytes(m_statement, col);
-    return blob;
-}
-
 bool SQLiteStatement::returnTextResults(int col, Vector<String>& v)
 {
     ASSERT(col >= 0);
